# cpp-project-final-term-b-m

./: CMakeLists.txt
data/: angajati.csv
include/: Angajat.h  CommandParser.h  DataCalendaristica.h  EmployeeRepository.h  ReportService.h  SearchService.h
src/: Angajat.cpp  CommandParser.cpp  DataCalendaristica.cpp  EmployeeRepository.cpp  ReportService.cpp  SearchService.cpp  main_app_2.cpp
